# linaldb

./: .gitignore  CHANGELOG.md  CONSISTENCY_PLAN.md  CONTRIBUTING.md  Cargo.toml  PYTHON_R_INTEROP_PLAN.md  README.md  SECURITY.md  SIGNAL_PROCESSING_PLAN.md
clients/: CONTRACT.md
clients/python/: CHANGELOG.md  README.md  pyproject.toml
clients/python/examples/: README.md  digit_classification.py
clients/python/linaldb/: __init__.py  client.py  dataset.py  errors.py  wire.py
clients/python/tests/: conftest.py  test_client_integration.py  test_dataset_integration.py  test_wire.py
docs/: ARCHITECTURE.md  DATASET_ARCHITECTURE.md  DSL_REFERENCE.md  ERROR_REFERENCE.md
examples/: README.md  benchmark.lnl  export_import_csv.lnl  gw_transient_analysis.lnl  hardening_test.lnl  hdf5_digit_classification.lnl  pbmc_cell_typing.lnl  persistence_demo.lnl  pipelines_and_search.lnl
src/: main.rs
tests/: aggregation_feature_test.rs  case_when_comparison_test.rs  cli_hardening_test.rs  connector_fields_selection_test.rs  connector_silent_skip_test.rs  correctness_integration.rs  dataset_delivery_test.rs  dataset_integrity_test.rs  dsl_dataset_complete.rs  engine_matrix_ops.rs  examples_cli_smoke_test.rs  examples_integration.rs  group_by_with_computed_column_test.rs  hash_join_test.rs  ingestion_test.rs  lazy_expression_test.rs  parser_error_surfacing_test.rs  persistence_test.rs  pipeline_persistence_test.rs  pipeline_test.rs  pipeline_vector_engine_test.rs  qualified_column_test.rs  scientific_connectors_test.rs  scientific_shape_preservation_test.rs  v0128_features_test.rs  (+10 more)
(+71 files in other folders)
